--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -2,7 +2,7 @@
 
 <%= select_tag :create_type, options_for_select({"Multiple Choice" =>
 "multiple_choice", "Draggable Bar Chart" => "draggable_bar_chart", "Bar Chart" => "bar_chart",
-  "Line Chart" => "line_chart"}),
+  "Line Chart" => "line_chart", "Draggable Line Chart" => "draggable_line_chart"}),
 {prompt: "Select an Option", onchange: "create_type_frame.src= `${location.href}?create_type=${this.value}`"}%>
 
 <%= turbo_frame_tag :create_type_frame do %>
