UI updates, help page filled in

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,4 +1,27 @@
 <% provide(:title, "Help") %>
 <div class="center jumbotron">
-  <h1>Help Center</h1>
-<h2>Get help with using our site here.</h2>
+  <h1>What is this site?</h1>
+</div>
+
+<p>IT for Concept Mastery is a project developed for CS 495 during Spring 2024. Our project focus is to create interactive questions
+to engage students and test mastery of complex concepts.</p>
+
+<p>Visit our <a href="https://warm-depths-62169-3030a0a91723.herokuapp.com/">project site</a> to learn more and check out
+our <a href="https://github.com/dylanc1/IT_For_Concept_Mastery">GitHub repository</a> as well.</p>
+<br>
+
+<h3>FAQs</h3>
+
+<p>1. How do I create new questions?</p>
+<p>User Admins and Developer Admins are able to create questions by visiting Questions on the navigation bar. Make sure
+to add questions to a skill by visiting Skills in order to try them out. Learners without admin privileges cannot
+create or modify questions and skills.</p>
+<br>
+<p>2. How can I try out these questions?</p>
+<p>Any user can visit the Learning Dashboard to take assessments by visiting Learning on the navigation bar. Click
+on a skill to take its corresponding assessment.</p>
+<br>
+<p>3. How does the Learning Dashboard work?</p>
+<p>Skills are divided by a user's mastery of that skill. Completing an assessment with a score of 80% or higher will
+demonstrate mastery and the skill will be marked as mastered. Completing an assessment with a score below 80% will
+mark the skill as in-progress. Learners can retake assessments in order to achieve mastery of a skill.</p>
