--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,17 +1,20 @@
 <div class="center jumbotron">
   <h1>Interactive Technology for Concept Mastery</h1>
 
-<% if !logged_in? %>
-<h2>Please sign up or log in to access our site.</h2>
-<% end %>
+  <% if !logged_in? %>
+  <h2>Please sign up or log in to access our site.</h2>
+  <% end %>
 
-<% if logged_in? %>
-<h2>Welcome back to our site!</h2>
-<% end %>
+  <% if logged_in? %>
+  <h2>Welcome back to our site!</h2>
+  <% end %>
 
-<% if !logged_in? %>
-<%= link_to "Sign Up", signup_path, class: "btn btn-lg btn-primary" %>
-<% end %>
+  <% if !logged_in? %>
+  <%= link_to "Sign Up", signup_path, class: "btn btn-lg btn-primary" %>
+  <% end %>
+
+  <% if logged_in? %>
+  <%= link_to "Learning Dashboard", learning_path, class: "btn btn-lg btn-primary" %>
+  <% end %>
+
 </div>
-
-<h2><%= image_tag("quanthub.jpg", alt: "QuantHub Logo", width: "400")%></h2>
