--- a/app/views/learning/_chart_example.html.erb
+++ b/app/views/learning/_chart_example.html.erb
@@ -7,7 +7,7 @@ var chart = new CanvasJS.Chart("chartContainer", {
 	theme: "light2",
 	axisX:{
 		minimum: 5,
-		maximum: 35
+		maximum: 45
 	},
 	axisY:{
 		minimum: 0,
@@ -18,7 +18,8 @@ var chart = new CanvasJS.Chart("chartContainer", {
 		dataPoints: [
             { x: 10, y: <%= @yvals[0] %> },
             { x: 20, y: <%= @yvals[1] %> },
-            { x: 30, y: <%= @yvals[2] %> }
+            { x: 30, y: <%= @yvals[2] %> },
+            { x: 40, y: <%= @yvals[3] %> }
 		]
 	}]
 });
@@ -95,7 +96,7 @@ jQuery("#chartContainer > .canvasjs-chart-container").on({
 			var min = chart.data[0].dataPoints[0].y;
 			var sum = chart.data[0].dataPoints[0].y;
 			
-			for(var i = 1; i < 3; i++){
+			for(var i = 1; i < 4; i++){
 				sum += chart.data[0].dataPoints[i].y;
 				if(chart.data[0].dataPoints[i].y > max){
 					max = chart.data[0].dataPoints[i].y;
@@ -105,7 +106,7 @@ jQuery("#chartContainer > .canvasjs-chart-container").on({
 				}
 			}
 			
-			var mean = sum / 3;
+			var mean = sum / 4;
 			var range = max - min;
 			
 			
@@ -147,7 +148,7 @@ jQuery("#chartContainer > .canvasjs-chart-container").on({
 			<p style="flex-basis: 5%;"><strong>Range: </strong></p><p id="range" style="flex-basis: 5%;">46</p>
 		</div>
 		<div style="display: flex; justify-content: center; text-align: center;">
-			<p style="flex-basis: 5%;"><strong>Mean: </strong></p><p id="mean" style="flex-basis: 5%;">50.00</p>
+			<p style="flex-basis: 5%;"><strong>Mean: </strong></p><p id="mean" style="flex-basis: 5%;">44.00</p>
 		</div>
 	</div>
 </body>
