--- a/app/views/questions/_interactive.html.erb
+++ b/app/views/questions/_interactive.html.erb
@@ -46,6 +46,28 @@
  			</div>
     </div>
   <% end %>
+  
+  <% if graph_type_placeholder == "draggable_bar_chart" %>
+  <div class="row">
+          <div class="col-sm-6">
+ 			      <%= chart_fields.label :label, "Minimum Height" %>
+ 			    </div>
+ 			    <div class="col-sm-6">
+ 			      <%= chart_fields.label :height, "Maximum Height" %>
+ 			    </div>
+ 			</div>
+      <% if index == 1 %>
+      <% end %>
+      <div class="row">
+          <div class="col-sm-6">
+            <%= chart_fields.text_field :label %>
+ 			    </div>
+ 			    <div class="col-sm-6">
+            <%= chart_fields.text_field :height %>
+ 			    </div>
+ 			</div>
+ 		<% end %> 
+    
 
   <%= render partial: "skills/#{graph_type_placeholder}",
   locals: {question: @question} %>
