Fixed min and max for bar, line, and draggable line chart. Added link to draggable explorer

--- a/app/views/skills/_bar_chart.html.erb
+++ b/app/views/skills/_bar_chart.html.erb
@@ -1,5 +1,8 @@
 <html>
 <head>
+<% y_min = question.chart_values[question.chart_values.count - 1].label %>
+<% y_max = question.chart_values[question.chart_values.count - 1].height %>
+<% y_present = !(y_min.blank?) || !(y_max.nil?) %>
 <script type="text/javascript">
 
 var chart = new CanvasJS.Chart("chartContainer", {
@@ -10,9 +13,13 @@ var chart = new CanvasJS.Chart("chartContainer", {
 	    text: "<%= question.graph_content %>"
 
 	},
-	axisX: {
-		title: "Countries"
-	},
+	<% if y_present %>
+		axisY:{
+		<%= !(y_min.blank?) ? ("minimum:  #{y_min} " + (!(y_max.nil?) ?
+		", maximum: #{y_max}" : " ")) : (!(y_max.nil?) ?
+		"maximum: #{y_max}" : " ") %>
+		}, 
+	<% end %>
 	data: [{
 		type: "column",
 		dataPoints: [
@@ -24,9 +31,9 @@ var chart = new CanvasJS.Chart("chartContainer", {
           <% next if label.blank? %>
           <% next if height.blank? %>
       		<% index = index + 1 %>
-      		<% if index != question.chart_values.count %>
+      		<% if index < (question.chart_values.count - 1) %>
       			{ label: "<%= label %>" , y: <%= height %> },
-      		<% else %>
+      		<% elsif index == (question.chart_values.count - 1) %>
       			{ label: "<%= label %>" , y: <%= height %> }
       		<% end %>
       	<% end %>
