--- a/app/views/skills/_draggable_bar_chart.html.erb
+++ b/app/views/skills/_draggable_bar_chart.html.erb
@@ -5,6 +5,7 @@
 
 <body>
 <div id="chartContainer" style="height: 370px; width: 100%;"></div>
+<p>Having trouble? Try out our <%= link_to "Draggable Bar Chart Explorer", learning_draggable_path, data: {turbo: "false"} %> </p>
 <script type="text/javascript">
 
 	var chart = new CanvasJS.Chart("chartContainer", {       
