--- a/app/views/skills/_form.html.erb
+++ b/app/views/skills/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: skill) do |form| %>
   <% if skill.errors.any? %>
     <div style="color: red">
-      <h4><%= pluralize(skill.errors.count, "error") %> prohibited this skill from being saved:</h4
+      <h2><%= pluralize(skill.errors.count, "error") %> prohibited this skill from being saved:</h2>
 
       <ul>
         <% skill.errors.each do |error| %>
